tests/ui/type-inference/sort_by_key.stderr
error[E0282]: type annotations needed
  --> $DIR/sort_by_key.rs:3:40
   |
LL |     lst.sort_by_key(|&(v, _)| v.iter().sum());
   |                                        ^^^ cannot infer type of the type parameter `S` declared on the method `sum`
   |
help: consider specifying the generic argument
   |
LL |     lst.sort_by_key(|&(v, _)| v.iter().sum::<S>());
   |                                           +++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
